--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button class="categoria">Cafetería</button>
         <button class="categoria">Almuerzos</button>
         <button class="categoria">Bebidas</button>
-
+    </div>    
     <script src="JS/main.js"></script>
 </body>
 </html>
